// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ast-decorators/core plugin-options allows to specify options with JSON 1`] = `
"class Link extends HTMLAnchorElement {
  _bar = 'baz';
}

console.log('bar');"
`;

exports[`@ast-decorators/core plugin-options compiles in another way if option has different state 1`] = `
"class Link extends HTMLAnchorElement {
  _bar = 'baz';
}"
`;

exports[`@ast-decorators/core plugin-options compiles in one way if option has one state 1`] = `
"class Link extends HTMLAnchorElement {
  #_bar = 'baz';
}"
`;

exports[`@ast-decorators/core plugin-options sends a Babel tools object and transformer options to the transformer function 1`] = `
"class Link extends HTMLAnchorElement {
  #_bar = 'baz';
}"
`;

exports[`@ast-decorators/core plugin-options sends transformer options and Babel plugin options to a decorator 1`] = `
"class Link extends HTMLAnchorElement {
  _bar = \\"packages/core/tests/fixtures/plugin-options/decorator-params/input.ts\\";
}"
`;
